--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -9,4 +9,20 @@
 	<properties>
 		<java.version>1.8</java.version> 
 	</properties>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.itic.bts.sio.MineSweeperApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>	
 </project>
